Fixed minor display issues on firefox.

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -49,7 +49,7 @@ div.navbar>div.center>div.left {
 }
 
 div.navbar>div.center>div.right {
-  height: 38px;
+  height: 36px;
   width: 150px;
   border: 0px;
   display: inline-block;
@@ -341,53 +341,57 @@ table#confirm-payments {
 }
 
 table#confirm-payments td {
-  padding-left: 5px;
+  padding-left: 0px;
   font-size: 15px;
   background-color: #FFFFFF;
   font-family: 'jacques_francoisregular';
   text-align: center;
   color: #3A3A3A;
   width: 110px;
+  height: 22px;
   display: inline-block;
 }
 
 table#confirm-payments td.name {
-  padding-left: 5px;
+  padding-left: 0px;
   font-size: 15px;
   background-color: #FFFFFF;
   font-family: 'jacques_francoisregular';
   text-align: center;
   color: #3A3A3A;
   width: 80px;
+  height: 21px;
   display: inline-block;
-  padding-top:2px;
-  padding-bottom:2px;
+  padding-top:0px;
+  padding-bottom:0px;
 }
 
 table#confirm-payments td.email {
-  padding-left: 5px;
+  padding-left: 0px;
   font-size: 15px;
   background-color: #FFFFFF;
   font-family: 'jacques_francoisregular';
   text-align: center;
   color: #3A3A3A;
   width: 190px;
+  height: 21px;
   display: inline-block;
-  padding-top:2px;
-  padding-bottom:2px;
+  padding-top:0px;
+  padding-bottom:0px;
 }
 
 table#confirm-payments td.amount {
-  padding-left: 5px;
+  padding-left: 0px;
   font-size: 15px;
   background-color: #FFFFFF;
   font-family: 'droid_serifregular';
   text-align: left;
   color: #3A3A3A;
   width: 70px;
+  height: 21px;
   display: inline-block;
-  padding-top:2px;
-  padding-bottom:2px;
+  padding-top:0px;
+  padding-bottom:0px;
 }
 
 table#confirm-payments td.button {
@@ -397,6 +401,7 @@ table#confirm-payments td.button {
   text-align: center;
   color: #3A3A3A;
   width: 60px;
+  height: 21px;
   display: inline-block;
 }
 
